--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,7 +1,5 @@
 global
     log 127.0.0.1 local0 notice
-    user haproxy
-    group haproxy
 
 defaults
     log global
@@ -10,18 +8,25 @@ defaults
     timeout server 5000
     timeout client 5000
 
-listen mysql-cluster
-    bind 0.0.0.0:3306
+frontend localnodes
+    bind *:3306
+    mode tcp
+    default_backend nodes
+
+backend nodes
     mode tcp
     option mysql-check user haproxy_check
     balance roundrobin
-    server mysql-1 10.0.0.1:3306 check
-    server mysql-2 10.0.0.2:3306 check
-    server mysql-3 10.0.0.2:3306 check
+    server mysql-1 mariadb-node-0.private.obrienware.com:3306 check
+    server mysql-2 mariadb-node-1.private.obrienware.com:3306 check
+    server mysql-3 mariadb-node-2.private.obrienware.com:3306 check
 
-listen 0.0.0.0:8080
+listen stats
+    bind *:8080
     mode http
     stats enable
     stats uri /
+    stats hide-version
     stats realm Private
     stats auth admin:admin
+
